[project]
name = "quality-checks"
version = "0.1.0"
description = "dependencies required for code quality checks (linting, formatting etc.)"
authors = [
    {name = "Matt Jarvis",email = "matt.jarvis2@nhs.net"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff (>=0.14.0,<0.15.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
